[gd_scene load_steps=16 format=4 uid="uid://d18uureu1ii28"]

[ext_resource type="Texture2D" uid="uid://biyav3rta55sw" path="res://Assets/Sprites/tileemap_cgj.png" id="1_cxin0"]
[ext_resource type="PackedScene" uid="uid://dkntt8o48wcnf" path="res://Scenes/Player.tscn" id="2_08n28"]
[ext_resource type="PackedScene" uid="uid://cyevgl3j20iki" path="res://Scenes/Enemy.tscn" id="4_c4nui"]
[ext_resource type="Script" path="res://Scripts/UI/ActionUI.gd" id="5_bn5ya"]
[ext_resource type="Script" path="res://Scripts/UI/ScreenUI.gd" id="5_u3t3i"]
[ext_resource type="Theme" uid="uid://dxk0op1eyxw0p" path="res://Assets/Themes/UI_Theme.tres" id="5_w3538"]
[ext_resource type="PackedScene" uid="uid://b3xs7xp6w0miq" path="res://Scenes/Components/HitBoxComponent.tscn" id="6_1h2k0"]
[ext_resource type="Script" path="res://Scripts/Objects/TeaCup.gd" id="6_slxof"]
[ext_resource type="Texture2D" uid="uid://d13yaejsycw6f" path="res://Assets/Sprites/tea.png" id="8_gjsj1"]
[ext_resource type="AudioStream" uid="uid://ceoogwb7uq2cl" path="res://Assets/Audio/BGM/Unstable Room.mp3" id="9_3q1rx"]
[ext_resource type="Texture2D" uid="uid://vrbkgoxin2da" path="res://Assets/Sprites/arrowpointer.png" id="9_evvec"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3r2kq"]
texture = ExtResource("1_cxin0")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/custom_data_0 = true
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/custom_data_0 = true
3:1/0 = 0
3:1/0/custom_data_0 = true
4:1/0 = 0
4:1/0/custom_data_0 = true
5:1/0 = 0
5:1/0/custom_data_0 = true
6:1/0 = 0
6:1/0/custom_data_0 = true
7:1/0 = 0
7:1/0/custom_data_0 = true
8:1/0 = 0
8:1/0/custom_data_0 = true
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 3.53553, 16, 1.76777, 16, 16, -16, 16)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 3.53553, 16, 1.76777, 16, 16, -16, 16)
1:6/0/custom_data_0 = true
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:6/0/custom_data_0 = true
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:6/0 = 0
9:6/0 = 0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:7/0 = 0
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:7/0 = 0
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:7/0 = 0
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:8/0 = 0
6:8/0 = 0
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_3orrr"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
sources/2 = SubResource("TileSetAtlasSource_3r2kq")

[sub_resource type="LabelSettings" id="LabelSettings_jkopx"]
font_size = 24

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b4u4m"]
size = Vector2(104, 90)

[node name="Prototype" type="Node2D"]

[node name="BG" type="TileMapLayer" parent="." groups=["tilemaps"]]
tile_map_data = PackedByteArray("AAD+/wAAAgAHAAEAAAD+//3/AgABAAAAAAD+//7/AgAFAAAAAAD+////AgAEAAEAAAD+/wEAAgAHAAEAAAD+/wIAAgAHAAEAAAD///3/AgABAAAAAAD///7/AgAGAAAAAAD/////AgAFAAEAAAD//wAAAgAHAAEAAAD//wEAAgAHAAEAAAD//wIAAgAHAAEAAAAAAP3/AgABAAAAAAAAAP7/AgAHAAAAAAAAAP//AgAEAAEAAAAAAAAAAgAHAAEAAAAAAAEAAgAHAAEAAAAAAAIAAgAHAAEAAAABAP7/AgAIAAAAAAABAP//AgAFAAEAAAD8//7/AgADAAAAAAD9//7/AgAEAAAAAAACAP7/AgAJAAAAAAD9////AgAEAAEAAAACAP3/AgACAAAAAAD8//3/AgAAAAAAAAD9//3/AgABAAAAAAABAP3/AgABAAAAAAACAP//AgAAAAIAAAACAAAAAgAJAAAAAAACAAEAAgAAAAIAAAACAAIAAgAJAAAAAAACAAMAAgAJAAAAAAACAAQAAgAAAAIAAAACAAUAAgAJAAAAAAD8////AgABAAEAAAD8/wAAAgABAAEAAAD8/wEAAgABAAEAAAD8/wIAAgABAAEAAAD8/wMAAgABAAEAAAD8/wQAAgABAAEAAAD8/wUAAgABAAEAAAD8/wYAAgABAAEAAAACAAYAAgAAAAIAAAACAAcAAgAAAAIAAAD8/wcAAgAJAAEAAAD9/wAAAgAHAAEAAAABAAAAAgAHAAEAAAABAAEAAgAHAAEAAAD9/wEAAgAHAAEAAAD9/wIAAgAHAAEAAAABAAIAAgAHAAEAAAABAAMAAgAAAAEAAAAAAAMAAgAAAAEAAAD+/wMAAgAAAAEAAAD//wMAAgAAAAEAAAD9/wMAAgAAAAEAAAD9/wQAAgAGAAEAAAD+/wQAAgAGAAEAAAAAAAQAAgAGAAEAAAABAAQAAgAGAAEAAAD//wQAAgAGAAEAAAD9/wUAAgAGAAEAAAD+/wUAAgAGAAEAAAD//wUAAgAGAAEAAAAAAAUAAgAGAAEAAAABAAUAAgAGAAEAAAABAAYAAgAGAAEAAAAAAAYAAgAGAAEAAAD//wYAAgAGAAEAAAD+/wYAAgAGAAEAAAD9/wYAAgAGAAEAAAD9/wcAAgAGAAEAAAD+/wcAAgAGAAEAAAD//wcAAgAGAAEAAAAAAAcAAgAGAAEAAAABAAcAAgAGAAEAAAABAAgAAgAGAAEAAAAAAAgAAgAGAAEAAAD//wgAAgAGAAEAAAD+/wgAAgAGAAEAAAD9/wgAAgAGAAEAAAD8/wgAAgABAAEAAAACAAgAAgAAAAIAAAA=")
tile_set = SubResource("TileSet_3orrr")

[node name="Back" type="TileMapLayer" parent="." groups=["tilemaps"]]
tile_map_data = PackedByteArray("AAD9////AgABAAUAAAD9/wAAAgAFAAUAAAD9/wEAAgAGAAUAAAD+/wEAAgAHAAUAAAAAAP7/AgAJAAQAAAD///7/AgAIAAQAAAABAP7/AgAAAAUAAAD+////AgACAAUAAAAAAP//AgADAAUAAAABAP//AgAEAAUAAAD//wYAAgAHAAcAAAD9//7/AgAGAAQAAAD+//7/AgAHAAQAAAA=")
tile_set = SubResource("TileSet_3orrr")

[node name="Seat" type="TileMapLayer" parent="." groups=["tilemaps"]]
tile_map_data = PackedByteArray("AAD//wYAAgAEAAQAAAD+/wQAAgAIAAMAAAD+/wUAAgABAAQAAAD+/wMAAgAFAAMAAAD//wUAAgACAAQAAAABAAYAAgAFAAQAAAABAAUAAgADAAQAAAABAAQAAgAJAAMAAAABAAMAAgAGAAMAAAA=")
tile_set = SubResource("TileSet_3orrr")

[node name="Interactables" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+//7/AgAJAAcAAAD+////AgAAAAgAAAD/////AgABAAgAAAABAAAAAgADAAgAAAD9/wEAAgAEAAgAAAD9/wAAAgACAAgAAAD+/wUAAgAFAAgAAAD//wUAAgADAAcAAAD//wYAAgAHAAcAAAA=")
tile_set = SubResource("TileSet_3orrr")

[node name="Player" parent="." instance=ExtResource("2_08n28")]
position = Vector2(-16, 16)

[node name="PlayerController" parent="Player" index="2" node_paths=PackedStringArray("tileMap")]
tileMap = NodePath("../../BG")

[node name="ActionController" parent="Player" index="4" node_paths=PackedStringArray("actionUI")]
actionUI = NodePath("../../CanvasLayer/VBoxContainer")

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="APBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -64.0
offset_right = 544.0
offset_bottom = -40.0
grow_vertical = 0
tooltip_text = "action point"
theme = ExtResource("5_w3538")
show_percentage = false

[node name="TeaBar" type="ProgressBar" parent="CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -544.0
offset_top = -360.0
offset_right = -512.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "action point"
theme = ExtResource("5_w3538")
fill_mode = 2
show_percentage = false

[node name="PoisonBar" type="ProgressBar" parent="CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -360.0
offset_right = -448.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "action point"
theme = ExtResource("5_w3538")
fill_mode = 2
show_percentage = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -84.0
offset_right = -24.0
offset_bottom = 84.0
grow_horizontal = 0
grow_vertical = 2
tooltip_text = "thing"
theme = ExtResource("5_w3538")
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("5_bn5ya")

[node name="SwitchButton" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "SWITCH MODE"

[node name="PourButton" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "POUR"

[node name="InteractButton" type="Button" parent="CanvasLayer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "THROW"

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -104.0
offset_right = 214.0
offset_bottom = -70.0
grow_vertical = 0
theme = ExtResource("5_w3538")
text = "ACTION POINTS"
label_settings = SubResource("LabelSettings_jkopx")
vertical_alignment = 1

[node name="ModeLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -72.0
offset_right = -36.0
offset_bottom = -38.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("5_w3538")
text = "Mode: Poison"
label_settings = SubResource("LabelSettings_jkopx")
horizontal_alignment = 2
vertical_alignment = 1

[node name="TurnCountLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.0
offset_top = 32.0
offset_right = 91.0
offset_bottom = 66.0
grow_horizontal = 2
theme = ExtResource("5_w3538")
text = "Turn"
label_settings = SubResource("LabelSettings_jkopx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnLabel" type="Label" parent="CanvasLayer"]
offset_left = 32.0
offset_top = 32.0
offset_right = 214.0
offset_bottom = 66.0
theme = ExtResource("5_w3538")
text = "Mode: Posion"
label_settings = SubResource("LabelSettings_jkopx")
vertical_alignment = 1

[node name="TutorialLabel2" type="Label" parent="CanvasLayer"]
offset_left = 400.0
offset_top = 64.0
offset_right = 776.0
offset_bottom = 94.0
theme = ExtResource("5_w3538")
theme_override_font_sizes/font_size = 32
text = "Objective: Fill cup with poison"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Screens" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("5_w3538")
script = ExtResource("5_u3t3i")

[node name="LoseScreen" type="Control" parent="CanvasLayer/Screens"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Screens/LoseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Screens/LoseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = -44.0
offset_right = 183.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Screens/LoseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = 28.0
offset_right = 183.5
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "It's over, you failed to poison the target"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinScreen" type="Control" parent="CanvasLayer/Screens"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Screens/WinScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Screens/WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = -44.0
offset_right = 183.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "YOU WIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Screens/WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = 28.0
offset_right = 183.5
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "You did it, the target is poisoned"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DrawScreen" type="Control" parent="CanvasLayer/Screens"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Screens/DrawScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Screens/DrawScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = -44.0
offset_right = 183.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "DRAW"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Screens/DrawScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = 28.0
offset_right = 183.5
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "You're both dead"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Front" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD9/wMAAgAEAAYAAAD+/wMAAgAFAAYAAAD9/wIAAgAAAAYAAAD+/wIAAgABAAYAAAAAAAMAAgAGAAYAAAABAAMAAgAHAAYAAAAAAAIAAgACAAYAAAABAAIAAgADAAYAAAAAAAEAAgAIAAUAAAABAAEAAgAJAAUAAAABAAQAAgAAAAcAAAABAAUAAgAEAAcAAAABAAYAAgAIAAcAAAD+////AgACAAUAAAD9/wUAAgABAAcAAAD9/wQAAgAIAAYAAAD+//7/AgAHAAQAAAD9/wYAAgAFAAcAAAD+/wYAAgAGAAcAAAD+/wUAAgACAAcAAAA=")
tile_set = SubResource("TileSet_3orrr")

[node name="Target" type="Node2D" parent="."]
position = Vector2(-24, 168)

[node name="HitBoxComponent" parent="Target" groups=["interactable"] instance=ExtResource("6_1h2k0")]
position = Vector2(8, 8)

[node name="Sprite2D" type="Sprite2D" parent="Target"]
position = Vector2(8, 8)
texture = ExtResource("8_gjsj1")

[node name="Interactable" type="Node2D" parent="Target"]
script = ExtResource("6_slxof")

[node name="FluidBar" type="ProgressBar" parent="Target"]
offset_left = -16.0
offset_top = -16.0
offset_right = 32.0
offset_bottom = -11.0
show_percentage = false

[node name="Sprite2D2" type="Sprite2D" parent="Target"]
position = Vector2(8, -8)
texture = ExtResource("9_evvec")

[node name="Interactables2" type="TileMapLayer" parent="." groups=["tilemaps"]]
tile_map_data = PackedByteArray("AAD+/wUAAgAFAAgAAAD//wUAAgAGAAgAAAD9/wcAAgACAAIAAAD8/wcAAgABAAIAAAD+/wcAAgADAAIAAAD//wcAAgAEAAIAAAAAAAcAAgAFAAIAAAABAAcAAgAGAAIAAAACAAcAAgAHAAIAAAD+/wgAAgAAAAMAAAD//wgAAgABAAMAAAABAAgAAgADAAMAAAAAAAgAAgAJAAYAAAD8/wgAAgAIAAIAAAD9/wgAAgAJAAIAAAA=")
tile_set = SubResource("TileSet_3orrr")

[node name="Enemy" parent="." groups=["tilemaps"] instance=ExtResource("4_c4nui")]
position = Vector2(-48, 144)

[node name="CollisionShape2D" parent="Enemy/ViewArea" index="0"]
position = Vector2(4, 11)
shape = SubResource("RectangleShape2D_b4u4m")

[node name="EnemyAI" parent="Enemy" index="3" node_paths=PackedStringArray("tileMap")]
tileMap = NodePath("../../BG")

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.591
attenuation = 2.07053
bus = &"SFX"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_3q1rx")
volume_db = -20.0
autoplay = true
attenuation = 2.07053
bus = &"BGM"
parameters/looping = true

[connection signal="teamodechanged" from="Player/ActionController" to="CanvasLayer/VBoxContainer" method="_on_teamodechanged"]

[editable path="Player"]
[editable path="Enemy"]
